--- a/src/dotnet/feelthemath.org/Content/main.css
+++ b/src/dotnet/feelthemath.org/Content/main.css
@@ -207,3 +207,12 @@ section {
         margin-bottom: 2rem;
     }
 }
+.feel-the-money-cta {
+    text-decoration: none;
+}
+.feel-the-money-cta rect{
+    transition: background 0.2s cubic-bezier(.4, 0, .6, 1);
+}
+.feel-the-money-cta:hover rect{
+   fill:#1868B2;
+}
